fix: popap z-index

--- a/src/components/PopupWithFilters/PopupWithFilters.module.css
+++ b/src/components/PopupWithFilters/PopupWithFilters.module.css
@@ -4,7 +4,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 1000;
 	background-color: rgba(144, 144, 144, 0.5);
 	opacity: 0;
 	visibility: hidden;
